# tui_rust

./: Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
tuis/minesweeper/: README.md
tuis/minesweeper/src/: main.rs  ui.rs  update.rs
tuis/mini_calculator/: .gitignore  Cargo.toml  README.md
tuis/mini_calculator/src/: events.rs  main.rs  ui.rs
