[package]
name = "tui_test"
version = "0.1.0"
edition = "2021"

##################
## Dependencies ##
##################
[dependencies]
meval = "0.2.0"
tui = "0.19"

[dependencies.crossterm]
version = "0.25"
optional = true
#
#[dev-dependencies.argh]
#version = "0.1"
#
#[dev-dependencies.rand]
#version = "0.8"
## end Dependencies ##
######################

[features]
default = ["crossterm"]
