[package]
name = "mini_calculator"
version = "0.1.0"
edition = "2021"

##################
## Dependencies ##
##################
[dependencies]
tui = "0.19"
math-parse = "1.0"

[dependencies.crossterm]
version = "0.27"
optional = true
#
#[dev-dependencies.argh]
#version = "0.1"
#
#[dev-dependencies.rand]
#version = "0.8"
## end Dependencies ##
######################

[features]
default = ["crossterm"]
